--- a/src/vue/inscription.html.twig
+++ b/src/vue/inscription.html.twig
@@ -11,11 +11,11 @@
         {% if form.valide == true %}
             <h1 class="h3 mb-3 font-weight-normal">Inscription réussie</h1>
             <h1 class="h3 mb-3 font-weight-normal">Voici votre identifiant : {{form.email}}</h1>
-            {% if form.role == 1 %}
+            {#{% if form.role == 1 %}
                 <h1 class="h3 mb-3 font-weight-normal">Vous êtes un développeur</h1>
             {% else %}
                 <h1 class="h3 mb-3 font-weight-normal">Vous êtes administrateur du site</h1>
-            {% endif %}
+            {% endif %}#}
             <h1 class="h3 mb-3 font-weight-normal">Un email de validation vous a été envoyé</h1>
             <h1 class="h3 mb-3 font-weight-normal">Veuillez valider votre email dans les 24h qui suivent ou votre compte sera supprimé</h1>
         {% else %}
@@ -38,10 +38,10 @@
                 <input type="password" class="form-control" id="inputMdp" name="inputPassword2" placeholder="Mot de passe">
                 <input type="nom" class="form-control" id="inputNom" name="inputNom" placeholder="Nom">
                 <input type="prenom" class="form-control" id="inputPrenom" name=" inputPrenom" placeholder="Prenom">
-                <select class="form-control" name='role' style="align-center">    <!attention il faut aussi 1name pr le role->
+                {#<select class="form-control" name='role' style="align-center">    <!attention il faut aussi 1name pr le role->
                     <option value="1">Developpeur</option>
                     <option value="2">Administrateur</option>
-                </select>
+                </select>#}
                 <button type="submit" name="btInscrire" class="btn btn-lg btn-primary btn-block">s'inscrire</button> <!-- ne pas oublier le name pr chaque element c tres important submit c pr pouvoir envoyer ensuite donc ne pas oublier nn plus-->
             </div>
         </form>
