--- a/src/vue/profil.html.twig
+++ b/src/vue/profil.html.twig
@@ -119,7 +119,7 @@
                                         {% endfor %}
                                     </table>
                                     <button class="btn btn-lg btn-primary btn-block" type="submit" name="btSupprimer">Supprimer</button>
-                                    <a class="btn btn-lg btn-primary btn-block" href="index.php?page=modiflangages">Ajouter des langages</a>
+                                    <a class="btn btn-lg btn-primary btn-block" href="index.php?page=modiflangages">Ajouter des machines</a>
                                     <!--<a href="index.php?page=modif-langages">Modifier et/ou ajouter des languages</a>-->
                                 </form>
                             </div>
