--- a/src/vue/connexion.html.twig
+++ b/src/vue/connexion.html.twig
@@ -34,22 +34,23 @@
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
                         <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
-                            <div class="col-lg-6">
+                            <div class="col-lg-2 d-none d-lg-block "> </div>
+                            <div class="col-lg-8">
+                                <div class="col-lg-2 d-none d-lg-block "> </div>
                                 <div class="p-5">
                                     <div class="text-center">
-                                        <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                                        <h1 class="h4 text-gray-900 mb-4">Connectez vous</h1>
                                     </div>
                                     <form class="user">
                                         <div class="form-group">
-                                            <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address...">
+                                            <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Entrez votre adresse email...">
                                         </div>
                                         <div class="form-group">
-                                            <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Password">
+                                            <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Mot de passe">
                                         </div>
 
                                         <a href="index.html" class="btn btn-primary btn-user btn-block">
-                                            Login
+                                            Connexion
                                         </a>
                                     </form>
                                     <hr>
