--- a/src/vue/index.html.twig
+++ b/src/vue/index.html.twig
@@ -18,20 +18,20 @@
             <!-- Page 1 -->
             <div class="item active">
                 <div class="carousel-page">
-                    <img src="images/ampoule.jpg" class="img-responsive" style="margin:0px auto;"  alt="ampoule"/>
+                    <img src="../../web/images/ampoule.jpg" class="img-responsive" style="margin:0px auto;" alt="ampoule"/>
                 </div>
                 <div class="carousel-caption">Page 1 de présentation</div>
             </div>
             <!-- Page 2 -->
             <div class="item">
-                <div class="carousel-page"><img src="images/prise.jpg" class="img-responsive img-rounded"
+                <div class="carousel-page"><img src="../../web/images/prise.jpg" class="img-responsive img-rounded"
                                                 style="margin:0px auto;"  /></div>
                 <div class="carousel-caption">Page 2 de présentation</div>
             </div>
             <!-- Page 3 -->
             <div class="item">
                 <div class="carousel-page">
-                    <img src="images/off.jpg" class="img-responsive img-rounded"
+                    <img src="../../web/images/off.jpg" class="img-responsive img-rounded"
                          style="margin:0px auto;max-height:100%;"  />
                 </div>
                 <div class="carousel-caption">Page 2 de présentation</div>
