--- a/src/vue/inscription.html.twig
+++ b/src/vue/inscription.html.twig
@@ -20,24 +20,15 @@
                         <div class="text-center">
                             <h1 class="h4 text-gray-900 mb-4">Crée un compte</h1>
                         </div>
-                        <form class="user">
-                            <div class="form-group row">
-                                <div class="col-sm-6 mb-3 mb-sm-0">
-                                    <input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="Votre prénom">
-                                </div>
-                                <div class="col-sm-6">
-                                    <input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Votre nom">
-                                </div>
-                            </div>
                             <div class="form-group">
-                                <input type="email" class="form-control form-control-user" id="exampleInputEmail" placeholder="Votre email">
+                                <input type="email" class="form-control form-control-user" id="exampleInputEmail" name="inputEmail" placeholder="Votre email">
                             </div>
                             <div class="form-group row">
                                 <div class="col-sm-6 mb-3 mb-sm-0">
-                                    <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Votre mot de passe">
+                                    <input type="password" class="form-control form-control-user" id="exampleInputPassword" name="inputPassword" placeholder="Votre mot de passe">
                                 </div>
                                 <div class="col-sm-6">
-                                    <input type="password" class="form-control form-control-user" id="exampleRepeatPassword" placeholder="Confirmez votre mot de passe">
+                                    <input type="password" class="form-control form-control-user" id="exampleRepeatPassword" name="inputPassword2" placeholder="Confirmez votre mot de passe">
                                 </div>
                             </div>
                             <a href="login.html" class="btn btn-primary btn-user btn-block">
