--- a/src/vue/connexion.html.twig
+++ b/src/vue/connexion.html.twig
@@ -1,4 +1,6 @@
 {% extends "base.html.twig" %}
+{% block title %} {{ parent() }} Se connecter {% endblock %}
+
 {% block contenu %}
     <br><br>
     <form>
