--- a/src/vue/index.html.twig
+++ b/src/vue/index.html.twig
@@ -17,7 +17,7 @@
             <!-- Page 1 -->
             <div class="item active">
                 <div class="carousel-page">
-                    <img src="images/ampoule.jpg" class="img-responsive" style="margin:0px auto;" />
+                    <img src="../../web/images/ampoule.jpg" class="img-responsive" style="margin:0px auto;" />
                 </div>
                 <div class="carousel-caption">Page 1 de présentation</div>
             </div>
