--- a/src/vue/MaConso.html.twig
+++ b/src/vue/MaConso.html.twig
@@ -12,6 +12,7 @@
     <div class="row">
 
 
+
         <!-- Content Row -->
 
 
@@ -23,10 +24,13 @@
         <div class="row">
 
             <!-- Content Column -->
-            <div class="col-lg-6 mb-4">
+            <div class="col-md-1"></div>
+            <div class="col-lg-5 mb-4">
 
                 <!-- Project Card Example -->
+
                 <div class="card shadow mb-4">
+
                     <div class="card-header py-3">
                         <h6 class="m-0 font-weight-bold text-primary">Projects</h6>
                     </div>
@@ -54,12 +58,13 @@
                     </div>
                 </div>
 
+
                 <!-- Color System -->
 
 
             </div>
 
-            <div class="col-lg-6 mb-4">
+            <div class="col-lg-5 mb-4">
 
                 <div class="row">
                     <div class="col-lg-6 mb-4">
@@ -80,6 +85,8 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-1"></div>
+
                     <div class="col-lg-6 mb-4">
                         <div class="card bg-primary text-white shadow">
                             <div class="card-body row">
