--- a/src/vue/MaConso.html.twig
+++ b/src/vue/MaConso.html.twig
@@ -4,7 +4,7 @@
 <div class="container-fluid">
 
     <!-- Page Heading -->
-    <div class="d-sm-flex align-items-center justify-content-between mb-4">
+    <div class="d-sm-flex align-items-center justify-content-between mb-4" style="padding-left: 20%">
         <h1 class="h3 mb-0 text-gray-800">Ma consommation </h1>
     </div>
 
