--- a/src/vue/connexion.html.twig
+++ b/src/vue/connexion.html.twig
@@ -52,13 +52,13 @@
                                             <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Mot de passe">
                                         </div>
 
-                                        <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                        <a href="index.php?page=connexion" class="btn btn-primary btn-user btn-block">
                                             Connexion
                                         </a>
                                     </form>
                                     <hr>
                                     <div class="text-center">
-                                        <a class="small" href="forgot-password.html">Inscription</a>
+                                        <a class="small" href="index.php?page=inscription">Inscription</a>
                                     </div>
 
                                 </div>
