--- a/src/vue/base.html.twig
+++ b/src/vue/base.html.twig
@@ -51,6 +51,14 @@
                 <span>Accueil</span></a>
         </li>
 
+        <hr class="sidebar-divider">
+
+        <li class="nav-item">
+            <a class="nav-link" href="index.php?page=gestionmachines">
+                <i class="fas fa-fw fa-chart-area"></i>
+                <span>Gerer les machines</span></a>
+        </li>
+
 
         <hr class="sidebar-divider">
 
