--- a/src/vue/base.html.twig
+++ b/src/vue/base.html.twig
@@ -72,7 +72,7 @@
                 <span>A propos</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="index.php?page=apropos" >
+            <a class="nav-link" href="index.php?page=mentionlegales" >
                 <i class="fas fa-fw fa-chart-area"></i>
                 <span>Mention légales</span></a>
         </li>
