--- a/src/vue/inscription.html.twig
+++ b/src/vue/inscription.html.twig
@@ -24,7 +24,8 @@
         <div class="card-body p-0">
             <!-- Nested Row within Card Body -->
             <div class="row">
-                 <img src="images/planete.jpg"> </div>
+                <div style="padding-right: 4%">
+                 <img src="images/planete.jpg"> </div> </div>
                 <div class="col-lg-7">
                     <div class="p-5">
                         <div class="text-center">
