--- a/src/vue/modifprofil.html.twig
+++ b/src/vue/modifprofil.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 {% block style %}<link href="css/style-signin.css" rel="stylesheet"> {% endblock %}
-{% block title %} {{ parent() }} Modifier un utilisateur {% endblock %}
+{% block title %} {{ parent() }} Modifier le profil {% endblock %}
 
 {% block contenu %}
     <div style="padding-top: 5%">
@@ -9,8 +9,8 @@
             {% if form.utilisateur != null %}
                 <form class="form-signin" action="index.php?page=modifprofil" method="post"
                       enctype="application/x-www-form-urlencoded">
-                    <div style="padding-left: 30%">
-                        <h1 class="h3 mb-3 font-weight-normal">Modifier un utilisateur</h1>
+                    <div style="padding-top: 2%; padding-bottom: 6%">
+                        <h1 class="h3 mb-3 font-weight-normal">Modifier le profil</h1>
                     </div>
                     <label for="inputPassword" class="sr-only">Modifier le mot de passe:</label>
                     <input type="password" id="inputPassword" name="mdp" class="form-control" placeholder="Modifier le mot de passe">
