--- a/src/vue/base.html.twig
+++ b/src/vue/base.html.twig
@@ -72,6 +72,12 @@
                 <span>Suivi de consomation</span></a>
         </li>
 
+        <li class="nav-item">
+            <a class="nav-link" href="index.php?page=consoMachine">
+                <i class="fas fa-fw fa-chart-area"></i>
+                <span>Calcul de votre consommation</span></a>
+        </li>
+
         <hr class="sidebar-divider">
 
         <li class="nav-item">
