--- a/src/vue/profil.html.twig
+++ b/src/vue/profil.html.twig
@@ -41,7 +41,7 @@
             <div class="col-md-6">
 
                 <h5>
-                    {{ unUtilisateur.prenom }} {{ unUtilisateur.nom }}
+                    {{ unUtilisateur.prenom }} {{ unUtilisateur.nom }} {{ unUtilisateur.id }}
                 </h5>
                 <h6>
                     Bonjour EcoUtilisateur voici ton profil
