--- a/src/vue/inscription.html.twig
+++ b/src/vue/inscription.html.twig
@@ -24,9 +24,8 @@
         <div class="card-body p-0">
             <!-- Nested Row within Card Body -->
             <div class="row">
-                <div style="padding-right: 4%">
-                 <img src="images/planete.jpg"> </div> </div>
-                <div class="col-lg-7">
+
+                <div class="col-xl-10 col-lg-12 col-md-9" style="padding-left: 20%">
                     <div class="p-5">
                         <div class="text-center">
                             <h1 class="h4 text-gray-900 mb-4">Crée un compte</h1>
