--- a/src/vue/base.html.twig
+++ b/src/vue/base.html.twig
@@ -52,6 +52,7 @@
                 <i class="fas fa-fw fa-tachometer-alt"></i>
                 <span>Accueil</span></a>
         </li>
+        {% if session.login is defined %}
 
         <hr class="sidebar-divider">
 
@@ -78,7 +79,7 @@
                 <i class="fas fa-fw fa-chart-area"></i>
                 <span>Calcul de votre consommation</span></a>
         </li>
-
+{% endif %}
         <hr class="sidebar-divider">
 
         <li class="nav-item">
